--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <body>
         <div id="map">
         </div>
-        <script src="js/qgis2web_expressions.js"></script>
-        <script src="js/leaflet.js"></script>
-        <script src="js/leaflet.rotatedMarker.js"></script>
+        <script src="/js/qgis2web_expressions.js"></script>
+        <script src="/js/leaflet.js"></script>
+        <script src="/js/leaflet.rotatedMarker.js"></script>
         <script src="js/leaflet.pattern.js"></script>
         <script src="js/leaflet-hash.js"></script>
         <script src="js/Autolinker.min.js"></script>
