--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <script src="./js/qgis2web_expressions.js"></script>
         <script src="./js/leaflet.js"></script>
         <script src="./js/leaflet.rotatedMarker.js"></script>
-        <script src="js/leaflet.pattern.js"></script>
-        <script src="js/leaflet-hash.js"></script>
-        <script src="js/Autolinker.min.js"></script>
-        <script src="js/rbush.min.js"></script>
-        <script src="js/labelgun.min.js"></script>
-        <script src="js/labels.js"></script>
-        <script src="data/_1.js"></script>
-        <script src="data/__2.js"></script>
+        <script src="./js/leaflet.pattern.js"></script>
+        <script src="./js/leaflet-hash.js"></script>
+        <script src="./js/Autolinker.min.js"></script>
+        <script src="./js/rbush.min.js"></script>
+        <script src="./js/labelgun.min.js"></script>
+        <script src="./js/labels.js"></script>
+        <script src="./data/_1.js"></script>
+        <script src="./data/__2.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:20, minZoom:10
