--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <script src="./js/rbush.min.js"></script>
         <script src="./js/labelgun.min.js"></script>
         <script src="./js/labels.js"></script>
-        <script src="./data/_1.js"></script>
-        <script src="./data/__2.js"></script>
+        <script src="./data/main_1.js"></script>
+        <script src="./data/main__2.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:20, minZoom:10
