--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <script src="./data/main__2.js"></script>
         <script>
         var map = L.map('map', {
-            zoomControl:true, maxZoom:20, minZoom:13
-        }).fitBounds([[46.622472463421374,32.58396690885996],[46.663222432698056,32.686467877736774]]);
+            zoomControl:true, maxZoom:16, minZoom:13
+        }).fitBounds([[46.6329,32.58396690885996],[46.663222432698056,32.686467877736774]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
