--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="data/_1.js"></script>
-        <script src="data/__2.js"></script>
-        <script src="data/_3.js"></script>
+        <script src="data/l_1.js"></script>
+        <script src="data/l__2.js"></script>
+        <script src="data/l_3.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:17, minZoom:14
