--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         bounds_group.addLayer(layer__3);
         map.addLayer(layer__3);
         var baseMaps = {};
-        L.control.layers(baseMaps,{'<img src="legend/_3.png" /> Реклама': layer__3,'<img src="legend/__2.png" /> Реєстр_памяток': layer___2,'<img src="legend/_1.png" /> Історичний центр міста': layer__1,"OpenStreetMap": layer_OpenStreetMap_0,},{collapsed:false}).addTo(map);
+        L.control.layers(baseMaps,{'<img src="legend/p_3.png" /> Реклама': layer__3,'<img src="legend/p__2.png" /> Реєстр_памяток': layer___2,'<img src="legend/p_1.png" /> Історичний центр міста': layer__1,"OpenStreetMap": layer_OpenStreetMap_0,},{collapsed:false}).addTo(map);
         setBounds();
         </script>
     </body>
