--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         }
         
 
-<!--locations-->
+// <!--locations-->
 
         layer_OpenStreetMap_0;
         map.addLayer(layerLoc);
@@ -114,7 +114,7 @@
             },
         });
 
-<!--historycal centre-->
+// <!--historycal centre-->
 
         function style_centre() {
             return {
@@ -144,7 +144,7 @@
             style: style_centre,
         });
 
-<!--historycal buildings-->
+// historycal buildings
 
         bounds_group.addLayer(layer__1);
         map.addLayer(layer__1);
@@ -226,7 +226,7 @@
             },
         });
 
-        <!--Блок для відображення точок із рекламою-->
+        //Блок для відображення точок із рекламою
 
         bounds_group.addLayer(layer___2);
         map.addLayer(layer___2);
