--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             dataVar: 'json_location',
             layerName: 'layerLoc',
             pane: 'paneLoc',
-            onEachFeature: pop__1,
+            // onEachFeature: pop__1,
             style: style_centre,
             pointToLayer: function (feature, latlng) {
                 var context = {
