--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="css/leaflet.css">
-        <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/qgis2web.css">
+        <link rel="stylesheet" href="css/fontawesome-all.min.css">
         <style>
         #map {
-            width: 1500px;
-            height: 700px;
+            width: 75%;
+            height: 100vh;
         }
         </style>
         <title></title>
     </head>
     <body>
-        <div id="map">
-        </div>
+        <aside class="right_box">
+            <h2>Hello World</h2>
+
+        </aside>
+        <div id="map"></div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
         <script src="js/leaflet.rotatedMarker.js"></script>
@@ -36,17 +41,14 @@
         var map = L.map('map', {
             zoomControl:true, maxZoom:16, minZoom:14
         }).fitBounds([[46.61388549108062,32.56471061866049],[46.67693119081376,32.712798729302655]]);
-        var hash = new L.Hash(map);
+
+
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
         var bounds_group = new L.featureGroup([]);
-        function setBounds() {
-        }
 
-        map.createPane('pane_OpenStreetMap_0');
-        map.getPane('pane_OpenStreetMap_0').style.zIndex = 400;
+
         var layer_OpenStreetMap_0 = L.tileLayer('http://services.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}.png', {
-            pane: 'pane_OpenStreetMap_0',
             opacity: 1.0,
             attribution: '',
             minZoom: 10,
@@ -54,34 +56,34 @@
             minNativeZoom: 0,
             maxNativeZoom: 19
         });
-        layer_OpenStreetMap_0;
         map.addLayer(layer_OpenStreetMap_0);
-        function pop__1(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-        
 
-// <!--locations-->
 
-        bounds_group.addLayer(layerLoc);
-        map.addLayer(layerLoc);
+
+        /* ******************************
+         *************Елемент 1 **********
+         ******************************** */
+
         function popLoc(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
+                    <td>' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                    <td>' + (feature.properties['name'] !== null ? autolinker.link(feature.properties['name'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                    <td>' + (feature.properties['S'] !== null ? autolinker.link(feature.properties['S'].toLocaleString()) : '') + '</td>\
+                    <td>' + (feature.properties['W'] !== null ? autolinker.link(feature.properties['W'].toLocaleString()) : '') + '</td>\
+                    <td>' + (feature.properties['O'] !== null ? autolinker.link(feature.properties['O'].toLocaleString()) : '') + '</td>\
+                    <td>' + (feature.properties['T'] !== null ? autolinker.link(feature.properties['T'].toLocaleString()) : '') + '</td>\
                     </tr>\
                 </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
+            layer.bindPopup(popupContent, {maxHeight: 1000});
         }
 
         function style_locations() {
             return {
-                pane: 'paneLoc',
                 opacity: 0.5,
                 color: 'rgba(35,35,35,1.0)',
                 dashArray: '',
@@ -91,18 +93,16 @@
                 fill: true,
                 fillOpacity: 0.3,
                 fillColor: 'rgba(35,35,35,1.0)',
-                interactive: true,
+                interactive: true
             }
         }
-        map.createPane('paneLoc');
-        map.getPane('paneLoc').style.zIndex = 407;
-        map.getPane('paneLoc').style['mix-blend-mode'] = 'normal';
+
+
         var layerLoc = new L.geoJson(json_location, {
             attribution: '',
             interactive: true,
             dataVar: 'json_location',
             layerName: 'layerLoc',
-            pane: 'paneLoc',
             onEachFeature: popLoc,
             style: style_centre,
             pointToLayer: function (feature, latlng) {
@@ -111,14 +111,32 @@
                     variables: {}
                 };
                 return L.circleMarker(latlng, style_locations(feature));
-            },
+            }
         });
 
-// <!--historycal centre-->
+
+        bounds_group.addLayer(layerLoc);
+        map.addLayer(layerLoc);
+
+
+
+        /* ******************************
+        *************Елемент 2 **********
+        ******************************** */
+
+
+        function pop__1(feature, layer) {
+            var popupContent = '<table>\
+                    <tr>\
+                    <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+        }
+
 
         function style_centre() {
             return {
-                pane: 'pane__1',
                 opacity: 0.5,
                 color: 'rgba(196,123,123,1.0)',
                 dashArray: '',
@@ -128,26 +146,28 @@
                 fill: true,
                 fillOpacity: 0.3,
                 fillColor: 'rgba(196,123,123,1.0)',
-                interactive: false,
+                interactive: true
             }
         }
-        map.createPane('pane__1');
-        map.getPane('pane__1').style.zIndex = 401;
-        map.getPane('pane__1').style['mix-blend-mode'] = 'normal';
+
         var layer__1 = new L.geoJson(json__1, {
             attribution: '',
             interactive: false,
             dataVar: 'json__1',
             layerName: 'layer__1',
-            pane: 'pane__1',
             onEachFeature: pop__1,
-            style: style_centre,
+            style: style_centre
         });
-
-// historycal buildings
 
         bounds_group.addLayer(layer__1);
         map.addLayer(layer__1);
+
+
+
+        /* ******************************
+         *************Елемент 3 **********
+         ******************************** */
+
         function pop___2(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
@@ -190,9 +210,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
+
         function style_buildings() {
             return {
-                pane: 'pane___2',
                 radius: 5.0,
                 opacity: 1,
                 color: 'rgba(245,172,156,1.0)',
@@ -207,15 +227,12 @@
             }
         }
 
-        map.createPane('pane___2');
-        map.getPane('pane___2').style.zIndex = 402;
-        map.getPane('pane___2').style['mix-blend-mode'] = 'normal';
+
         var layer___2 = new L.geoJson(json___2, {
             attribution: '',
             interactive: true,
             dataVar: 'json___2',
             layerName: 'layer___2',
-            pane: 'pane___2',
             onEachFeature: pop___2,
             pointToLayer: function (feature, latlng) {
                 var context = {
@@ -226,20 +243,26 @@
             },
         });
 
-        //Блок для відображення точок із рекламою
 
         bounds_group.addLayer(layer___2);
         map.addLayer(layer___2);
+
+
+
+        /* ******************************
+         ************* Елемент 4 **********
+         ******************************** */
+
+
+
         function pop__3(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                    </tr>\
-                </table>';
+            var popupContent = '<table><tr></tr></table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
+
+
         function style_rek() {
             return {
-                pane: 'pane__3',
                 radius: 2.0,
                 opacity: 1,
                 color: 'rgba(35,35,35,0.0)',
@@ -250,18 +273,15 @@
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(0,0,4,1.0)',
-                interactive: false,
+                interactive: false
             }
         }
-        map.createPane('pane__3');
-        map.getPane('pane__3').style.zIndex = 403;
-        map.getPane('pane__3').style['mix-blend-mode'] = 'normal';
+
         var layer__3 = new L.geoJson(json__3, {
             attribution: '',
             interactive: false,
             dataVar: 'json__3',
             layerName: 'layer__3',
-            pane: 'pane__3',
             onEachFeature: pop__3,
             pointToLayer: function (feature, latlng) {
                 var context = {
@@ -274,7 +294,16 @@
 
         bounds_group.addLayer(layer__3);
         map.addLayer(layer__3);
+
         var baseMaps = {};
+
+
+
+        /* ******************************
+         ************* Controls **********
+         ******************************** */
+
+
         L.control.layers(baseMaps,{
             '<img src="legend/p__2.png" /> Реклама': layer__3,
             '<img src="legend/p_3.png" /> Реєстр_памяток': layer___2,
@@ -284,6 +313,8 @@
         },{
             collapsed:false
         }).addTo(map);
+
+
         setBounds();
         </script>
     </body>
