--- a/index.html
+++ b/index.html
@@ -331,14 +331,9 @@
         setBounds();
         $("#close").on("click", function(d){ $("#openModal").css("display", "none"); })
         </script>
-    <div>
-        
-    </div>
     <div id="openModal" class="modal">
         <a title="Close" id="close" class = "close">×</a>
-        <div id="modal_content" style = "modal_content">
-        </div>
+        <div id="modal_content" class = "modal_content"> </div>
     </div>
-    
     </body>
 </html>
