--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <script src="jquery-3.3.1.js"></script>
         <style>
         #map {
-            width: 100%;
-            height: 100vh;
+            width: 99%;
+            height: 95vh;
             margin: 5px;
         }
         </style>
@@ -26,6 +26,17 @@
         </aside> -->
 
         <div id="map"></div>
+        <div id="openModal" class="modal">
+            <a title="Close" id="close" class = "close">×</a>
+        <div id="modal_content" class = "modal_content">
+        </div>
+    </div>
+
+
+
+
+
+
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
         <script src="js/leaflet.rotatedMarker.js"></script>
@@ -71,7 +82,7 @@
         function popLoc(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                    <td class= "swot-style-title">Назва: ' + (feature.properties['name'] !== null ? autolinker.link(feature.properties['name'].toLocaleString()) : '') + '</td>\
+                    <td class= "swot-style-title">Назва: ' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                     <td class = "swot-style-type">S</td>\
@@ -318,22 +329,19 @@
 
 
         L.control.layers(baseMaps,{
-            '<img src="legend/p__2.png" /> Реклама': layer__3,
-            '<img src="legend/p_3.png" /> Реєстр_памяток': layer___2,
-            '<img src="legend/p_1.png" /> Історичний центр міста': layer__1,
-            '< /> Локації': layerLoc,
+            '<img src="legend/rek.png" /> Реклама': layer__3,
+            '<img src="legend/buildings.png" /> Реєстр_памяток': layer___2,
+            '<img src="legend/center.png" /> Історичний центр міста': layer__1,
+            '<img src="legend/locations.png" /> Локації': layerLoc,
             
         },{
             collapsed:false
         }).addTo(map);
 
 
-        setBounds();
+        // setBounds();
         $("#close").on("click", function(d){ $("#openModal").css("display", "none"); })
         </script>
-    <div id="openModal" class="modal">
-        <a title="Close" id="close" class = "close">×</a>
-        <div id="modal_content" class = "modal_content"> </div>
-    </div>
+        
     </body>
 </html>
