--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
                     <td class= "swot-style-title">Локація: ' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                    <td class = "swot-style-type">S</td>\
-                    <td class = "swot-style-type">W</td>\
+                    <td class = "swot-style-type">S (сильні сторони)</td>\
+                    <td class = "swot-style-type">W (слабкі сторони)</td>\
                     </tr>\
                     <td class= "swot-style">' + (feature.properties['S'] !== null ? autolinker.link(feature.properties['S'].toLocaleString()) : '') + '</td>\
                     <td class= "swot-style">' + (feature.properties['W'] !== null ? autolinker.link(feature.properties['W'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                     <tr>\
-                    <td class = "swot-style-type">O</td>\
-                    <td class = "swot-style-type">T</td>\
+                    <td class = "swot-style-type">O (можливості)</td>\
+                    <td class = "swot-style-type">T (ризики)</td>\
                     </tr>\
                     </tr>\
                     <tr>\
