--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <span class= "swot-style-4">' + (feature.properties['T'] !== null ? autolinker.link(feature.properties['T'].toLocaleString()) : '') + '</span>\
                     </div>\
                     </div>\
-                </div>>';
+                </div>';
                 layer.on('click', function (e) { $("#openModal").css("display", "block");  });
                 layer.on('click', function (e) { $("#modal_content").html(popupContent);  });
         }
